--- a/config/config.json
+++ b/config/config.json
@@ -13,14 +13,8 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "production": {
+  "production":{
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres",
-    "dialectOptions": {
-      "ssl": {
-        "require": true,
-        "rejectUnauthorized": false
-      }
+    "dialect": "postgres"
     }
-  }
 }
