--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,21 @@
 {
   "development": {
     "username": "postgres",
-    "password": "changeme",
+    "password": "1234",
     "database": "todo_db_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "changeme",
+    "password": "1234",
     "database": "todo_db_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
+
   "production":{
-    "use_env_variable": "DATABASE_URL",
+    "use_env_variable": "DATABASE_2_URL",
     "dialect": "postgres"
-    }
+    }  
 }
