--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,20 @@
 {
   "development": {
     "username": "postgres",
-    "password": "1234",
+    "password": "divya03",
     "database": "todo_db_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "1234",
+    "password": "divya03",
     "database": "todo_db_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production":{
-    "use_env_variable": "DATABASE_1_URL",
+    "use_env_variable": "DATABASE_6_URL",
     "dialect": "postgres"
-}
+    }
 }
